--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>VirtualBrain AI – Smart AI Assistant</title>
+<link rel="icon" type="image/png" href="./AI-Icon-PNG.jpg">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -48,7 +49,7 @@
   <div class="about-container">
     <!-- IMAGE SIDE -->
     <div class="about-image">
-      <img src="./assets/virtuelles-gehirn-robotik-Xpert.Digital-png.png" alt="VirtualBrain AI Illustration">
+      <img src="virtuelles-gehirn-robotik-Xpert.Digital-png.png" alt="VirtualBrain AI Illustration">
     </div>
 
     <!-- TEXT SIDE -->
@@ -523,3 +524,4 @@ closeMenu.addEventListener('click', ()=>{
 
 </body>
 </html>
+
