--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>VirtualBrain AI – Smart AI Assistant</title>
+  <link rel="icon" type="image/png" href="./artificial-intelligence-icon-0.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -157,4 +158,5 @@ hamburger.addEventListener('click', ()=>{
 closeMenu.addEventListener('click', ()=>{
   navLinks.classList.remove('open');
 });
+
 </script>
